    - 候補ウィンドウの位置の決め方を改良。
    - ローマ字入力で最後に入力したのが「n」だったら「ん」にする。
    - カ変動詞の活用を修正。
    - 辞書を増強。変換精度の向上。
- 2023-04-23 Ver.0.9.8.6
    - 五段動詞の活用を修正。
    - 辞書を増強。変換精度の向上。
    - ユーザー辞書の不具合を修正。
    - IME本体とテストコードを分離。
    - 変換アルゴリズムとしてコスト最小法を採用。
- 2023-05-03 Ver.0.9.8.7
    - 辞書を増強。変換精度の向上。
- 2023-12-04 Ver.0.9.8.8
    - 他のIMEを消さないようにした。
    - 基本辞書をbasic.dat/basic.dicに改名。
- 2023-12-23 Ver.0.9.8.9
    - ビルド方法を間違えたので再構築。
- 2025-05-13 Ver.0.9.9.0
    - 候補ウィンドウのヌルチェックでちらつきをなくした。
- 2025-06-01 Ver.0.9.9.1
    - HKL を E0E20411 に変更。
    - 「低レベル セットアップ」をサポート。これにより Windows 2000 サポートの復活。
    - システム ペン アイコンをサポート。
    - インストーラをさらに改良。
- 2025-08-06 Ver.0.9.9.3
    - ツールチップにIMEの状態表示。
    - 「全般設定」ダイアログを改良。
    - 「ユーザー辞書」ダイアログを改良。
    - 英語リソースを追加。
    - システム ペン アイコンの左クリックメニューを追加。
    - 全角スペース禁止設定が可能に。
    - キー入力ルーチンを修正。
    - バージョン番号を修正。
    - 辞書を増強。
- 2025-08-08 Ver.1.0.0.0
    - 64ビットをサポート。Windows Vista/7/10/11をサポート。
    - 辞書の仕様変更。
    - 人工知能を用いてさらに辞書増強。
    - 「全角カタカナを優先」「半角カナを優先」設定を追加。
    - 長音「ー」を「～」に変換する機能を追加。
    - HKLを固定値から自由な値に変更。
    - アンインストーラを修正。
    - デジタル署名を追加。
- 2025-09-01 Ver.1.0.0.1
    - READMEの記述を修正。
    - 低レベルのセットアップ ファイルを改名。
    - 辞書を増強。
- 2026-01-03 Ver.1.0.0.2
    - キーリピートの余分な処理を削除。
    - 英語やドイツ語の Alt+~ をサポート。
    - HISTORY.txtをChangeLog.txtに改名。
    - インストーラの不具合を修正。
- 2026-01-03 Ver.1.0.0.3
    - Ctrlキーを伴うキーバインドが入力できなかったのを修正。
    - インストーラを修正。
    - 一部のキーが効かなかったのを修正。
- 2026-01-04 Ver.1.0.0.4
    - 「全角スペース禁止」の設定を尊重。
    - 「きのう」「あした」などが変換できるように。
    - インストーラをさらに修正。
- 2026-01-04 Ver.1.0.0.5
    - 低レベルセットアップを修正。
    - 「バージョン情報」「MZ-IMEパッド」のメニュー項目のアクションを修正。
- 2026-01-07 Ver.1.0.0.6
    - アンインストール時にレジストリキーをちゃんと消す。
    - IMEパッドのファイル解決をスマートに。
    - IMEパッドでAttachThreadInput関数を使わないようにした。
    - IMEパッドで常にアクティブに見えるようにした。
    - IMEパッドのちらつきを減らした。
    - 一度に表示する候補を9個までにした。
    - ファイルREADMEJP.txtをREADME_ja.txtに改名。
    - 辞書の増強。
- 2026-XX-YY Ver.1.0.0.7
    - InputContext::RevertTextでちゃんと候補をクリアする。
    - 英数キーの処理を修正。
    - 「やじるし」の変換を辞書に追加。
    - 記号類(HB_SYMBOL)の単語コストを重くした。
    - 数字の変換を改良。