@@ -115,3 +115,4 @@
     - 「やじるし」の変換を辞書に追加。
     - 記号類(HB_SYMBOL)の単語コストを重くした。
     - 数字の変換を改良。
+    - Shift+Spaceの挙動を修正。
